--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "plugin-template",
-  "version": "1.0.0",
-  "description": "A plugin template",
+  "name": "hide-disabled-emojis",
+  "version": "0.9.0",
+  "description": "Hides disabled emojis from the emoji picker.",
   "engines": {
     "node": ">=14.0.0"
   },
@@ -18,10 +18,11 @@
     "lint:fix": "pnpm run prettier:fix && pnpm run eslint:fix"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Ahlawat",
+  "license": "MIT",
   "devDependencies": {
     "@types/node": "^18.11.2",
+    "@types/react": "^18.0.28",
     "@typescript-eslint/eslint-plugin": "^5.40.1",
     "@typescript-eslint/parser": "^5.40.1",
     "eslint": "^8.25.0",
@@ -31,5 +32,6 @@
     "prettier": "^2.8.1",
     "replugged": "^4.1.0",
     "typescript": "^4.8.4"
-  }
+  },
+  "dependencies": {}
 }
