--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "id": "Tharki.HideDisabledEmojis",
+  "id": "dev.tharki.HideDisabledEmojis",
   "name": "HideDisabledEmojis",
   "description": "Hides disabled emojis from the emoji picker.",
   "author": {
@@ -7,7 +7,7 @@
     "discordID": "1025214794766221384",
     "github": "Tharki-God"
   },
-  "version": "0.9.2",
+  "version": "0.9.3",
   "updater": {
     "type": "github",
     "id": "Tharki-God/HideDisabledEmojis"
