--- a/manifest.json
+++ b/manifest.json
@@ -2,14 +2,14 @@
   "id": "dev.tharki.HideDisabledEmojis",
   "name": "HideDisabledEmojis",
   "description": "Hides disabled emojis from the emoji picker.",
-  "image": "https://tharki-god.github.io/files-random-host/bdpluginsassets/HideDisabledEmojis.png",
+  "image": "https://i.imgur.com/yUNq7fd.png",
   "source": "https://github.com/Tharki-God/HideDisabledEmojis",
   "author": {
     "name": "Ahlawat",
     "discordID": "1025214794766221384",
     "github": "Tharki-God"
   },
-  "version": "1.0.1",
+  "version": "1.0.2",
   "updater": {
     "type": "store",
     "id": "dev.tharki.HideDisabledEmojis"
