--- a/manifest.json
+++ b/manifest.json
@@ -16,6 +16,5 @@
   },
   "license": "MIT",
   "type": "replugged-plugin",
-  "renderer": "src/index.ts",
-  "plaintextPatches": "src/plaintextPatches.ts"
+  "renderer": "src/index.ts"
 }
