--- a/manifest.json
+++ b/manifest.json
@@ -3,11 +3,11 @@
   "name": "HideDisabledEmojis",
   "description": "Hides disabled emojis from the emoji picker.",
   "image": "https://i.imgur.com/yUNq7fd.png",
-  "source": "https://github.com/Tharki-God/HideDisabledEmojis",
+  "source": "https://github.com/YofukashiNo/HideDisabledEmojis",
   "author": {
-    "name": "Ahlawat",
-    "discordID": "1025214794766221384",
-    "github": "Tharki-God"
+    "name": "Nanakusa",
+    "discordID": "1121961711080050780",
+    "github": "YofukashiNo"
   },
   "version": "1.1.0",
   "updater": {
