--- a/manifest.json
+++ b/manifest.json
@@ -3,11 +3,11 @@
   "name": "HideDisabledEmojis",
   "description": "Hides disabled emojis from the emoji picker and more.",
   "image": "https://i.imgur.com/yUNq7fd.png",
-  "source": "https://github.com/YofukashiNo/HideDisabledEmojis",
+  "source": "https://github.com/yofukashino/HideDisabledEmojis",
   "author": {
     "name": "Nanakusa",
     "discordID": "1121961711080050780",
-    "github": "YofukashiNo"
+    "github": "yofukashino"
   },
   "version": "1.2.5",
   "updater": {
